# PolicyDriveR

./: .gitignore  README.md  index.html  pyproject.toml
docs/: index.html
examples/config/: extraction_fields.json
examples/outputs/: alignment.json  extractions.json  schema.json
src/: __init__.py
src/alignment/: __init__.py  base.py  config.py  prompts.py  schema.py
src/alignment/templates/: default_alignment_config.yaml  prompts.yaml
src/cli/: main.py
src/extraction/: __init__.py  base.py  config.py  prompts.py  schema.py
src/extraction/templates/: default_extraction_config.yaml  prompts.yaml
src/normalization/: __init__.py  base.py  schema.py
src/quad/: __init__.py
src/quad/alignment/: __init__.py  base.py
src/quad/cli/: __init__.py  main.py
src/quad/extraction/: __init__.py  base.py  config.py  schema.py
src/quad/normalization/: __init__.py  base.py
src/quad/scoring/: __init__.py  base.py
src/scoring/: __init__.py  base.py  config.py  schema.py
src/scoring/templates/: default_scoring_config.yaml
src/viewer/: __init__.py  base.py  config.py
src/viewer/templates/: default_viewer_config.yaml
test/: test_cli.py  test_extraction.py  test_ollama_port_cli.py  test_smoke.py
