[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "policydriver"
version = "0.1.0"
description = "Template for research-policy alignment tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyMuPDF>=1.24",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "unstructured[pdf]>=0.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
policydriver = "cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
extraction = ["templates/*.yaml"]
alignment = ["templates/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["test"]
